[INFER] Update shape number after rolling back properties in scripted 'new' correction, bug 662044.