js/src/jsobj.h
@@ -693,7 +693,7 @@ struct JSObject : js::gc::Cell {
 
     inline bool containsSlot(uint32 slot) const;
 
-    void rollbackProperties(uint32 slotSpan);
+    void rollbackProperties(JSContext *cx, uint32 slotSpan);
 
     js::Value& getSlotRef(uintN slot) {
         JS_ASSERT(slot < capacity);
